Update and rename img.html to blog.html

--- a/blog.html
+++ b/blog.html
@@ -107,25 +107,25 @@
     <main>
         <section class="categories">
             <div class="category" id="test">
-                <img src="PAK85_desk15215645_TP_V4.jpg" alt="テスト勉強">
+                <img src="images/PAK85_desk15215645_TP_V4.jpg" alt="テスト勉強">
                 <h2>テスト勉強編</h2>
                 <p>大学のテストに向けた勉強記録と反省</p>
                 <a href="#">もっと見る</a>
             </div>
             <div class="category" id="transfer">
-                <img src="MIZUHO319011_TP_V4.jpg" alt="編入">
+                <img src="images/MIZUHO319011_TP_V4.jpg" alt="編入">
                 <h2>編入編</h2>
                 <p>編入試験に向けた準備と情報</p>
                 <a href="#">もっと見る</a>
             </div>
             <div class="category" id="qualifications">
-                <img src="shimari02007_TP_V4.jpg" alt="資格">
+                <img src="images/shimari02007_TP_V4.jpg" alt="資格">
                 <h2>資格編</h2>
                 <p>簿記や他の資格取得を目指す道</p>
                 <a href="#">もっと見る</a>
             </div>
             <div class="category" id="toeic">
-                <img src="PAK75_englishchirabaru20141206204205_TP_V4.jpg" alt="TOEIC">
+                <img src="images/PAK75_englishchirabaru20141206204205_TP_V4.jpg" alt="TOEIC">
                 <h2>TOEIC編</h2>
                 <p>TOEICスコアアップのための挑戦</p>
                 <a href="#">もっと見る</a>
