--- a/index.html
+++ b/index.html
@@ -58,9 +58,15 @@
             width: 250px;
             text-align: center;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 350px; /* 高さを揃える */
         }
         .category img {
             max-width: 100%;
+            height: 150px; /* 画像の高さを統一 */
+            object-fit: cover; /* 画像が均等に収まる */
             border-radius: 4px;
         }
         .category h2 {
