--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">.
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>アキンドマインド - 経済学部生の生活ブログ</title>
     <style>
@@ -148,6 +148,33 @@
             padding: 1rem 0;
             margin-top: 2rem;
             width: 100%;
+        }
+        @media (max-width: 768px) {
+            .content {
+                flex-direction: column;
+                padding: 0;
+            }
+            .main {
+                flex: 1;
+                padding: 1rem;
+            }
+            .sidebar {
+                flex: 1;
+                padding: 1rem;
+                border-left: none;
+                border-top: 1px solid #ddd;
+            }
+            .categories {
+                grid-template-columns: 1fr;
+                padding: 1rem;
+            }
+            nav {
+                flex-direction: column;
+                align-items: center;
+            }
+            nav a {
+                margin: 0.5rem 0;
+            }
         }
     </style>
 </head>
