--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-# akindo8610.github.io
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -6,6 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>アキンドマインド - 経済学部生の生活ブログ</title>
     <style>
+        .about-me {
+            background-color: #f0f8ff;
+            padding: 1.5rem;
+            border-top: 1px solid #ddd;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 1rem;
+        }
+
+        .about-me-content {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            max-width: 800px;
+            gap: 1rem;
+        }
+
+        .about-me-icon {
+            width: 50px;
+            height: auto;
+            border-radius: 50%;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .about-me-text {
+            text-align: left;
+            color: #333;
+        }
+
+        .about-me-text h2 {
+            margin: 0 0 0.5rem;
+            font-size: 1.5rem;
+            color: #0077cc;
+        }
+
+        .about-me-text p {
+            margin: 0;
+            font-size: 1rem;
+            line-height: 1.5;
+        }
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
@@ -244,10 +285,21 @@
             </div>
         </aside>
     </div>
+    <div class="about-me">
+        <div class="about-me-content">
+            <img src="images/akimai.png" alt="アキマイ" class="about-me-image">
+            <div class="about-me-text">
+                <h2>紹介</h2>
+                <p>管理人のアキマイです。<br>
+                大学生活や資格取得の記録をお届けしています！<br>
+                一緒に頑張りましょう！</p>
+            </div>
+        </div>
+    </div>
     <footer>
         <p>&copy; 2025 アキンドマインド. All rights reserved.</p>
         <p>
-            当サイトではアフィリエイト広告を利用しています。リンクをクリックし商品を購入すると、運営者が報酬を受け取ることがあります。
+            当サイトではアフィリエイト広告を利用しています。
         </p>
     </footer>
 </body>
